--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "tailwindcss": "^4.1.11",
+        "three": "^0.178.0",
+        "vanta": "^0.5.24",
         "vue": "^3.5.17"
     },
     "devDependencies": {
