--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "vue": "^3.5.17"
     },
     "devDependencies": {
+        "@flydotio/dockerfile": "^0.7.10",
         "@tsconfig/node22": "^22.0.2",
         "@types/node": "^22.15.32",
         "@types/three": "^0.178.1",
         "@vitejs/plugin-vue": "^6.0.0",
+        "@vue/compiler-sfc": "^3.5.18",
         "@vue/eslint-config-prettier": "^10.2.0",
         "@vue/eslint-config-typescript": "^14.5.1",
         "@vue/tsconfig": "^0.7.0",
@@ -37,6 +39,6 @@
         "typescript": "~5.8.0",
         "vite": "^7.0.0",
         "vite-plugin-vue-devtools": "^7.7.7",
-        "vue-tsc": "^2.2.10"
+        "vue-tsc": "^2.2.12"
     }
 }
