Set `VITE_API_URL` build argument in Fly.io and Docker configurations

--- a/fly.toml
+++ b/fly.toml
@@ -6,7 +6,8 @@
 app = 'quark-shift'
 primary_region = 'gru'
 
-[build]
+[build.args]
+  VITE_API_URL = "https://quark-shift-api.fly.dev"
 
 [http_service]
   internal_port = 80
